--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,11 @@
     "xo": "^0.58.0"
   },
   "dependencies": {
-    "koa": "^2.15.1"
+    "@koa/cors": "^5.0.0",
+    "koa": "^2.15.1",
+    "koa-body": "^6.0.1",
+    "koa-bodyparser": "^4.4.1",
+    "koa-router": "^12.0.1",
+    "ramda": "^0.29.1"
   }
 }
