--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "xo"
   },
   "keywords": [],
   "author": "",
@@ -31,10 +34,7 @@
       "unicorn/no-array-method-this-argument": 0,
       "unicorn/no-array-reduce": 0,
       "unicorn/no-array-for-each": 0
-    },
-    "envs": [
-      "mocha"
-    ]
+    }
   },
   "prettier": {
     "bracketSpacing": false,
